--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
-*{
-    padding:0;
-    margin:0;
-    box-sizing:border;
-    font-family:'Poppins',sans-serif;
+/* Base Styles */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     list-style: none;
     scroll-behavior: smooth;
 }
 
-/* Home page */
-
-.banner{
-    width:100%;
+/* Home Page */
+.banner {
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     display: flex;
@@ -19,7 +19,7 @@
     align-items: center;
 }
 
-.banner video{
+.banner video {
     position: absolute;
     top: 0;
     left: 0;
@@ -29,45 +29,42 @@
     pointer-events: none;
 }
 
-.content{
+.content {
     position: relative;
     z-index: 1;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(1, 0, 5, 0.3),rgba(4, 1, 17, 0.3));
-
-
-
+    background-image: linear-gradient(rgba(1, 0, 5, 0.3), rgba(4, 1, 17, 0.3));
 }
 
-nav{
+nav {
     width: 100%;
     position: fixed;
     background-color: rgb(21, 74, 74);
-    box-shadow: 5px 5px 30px rgba(0, 0, 0, 15%);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.15);
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-nav .logo{
+nav .logo {
     width: 60px;
     margin: 2vh;
     margin-left: 8%;
 }
 
-nav ul li{
+nav ul li {
     list-style: none;
     display: inline-block;
     margin-left: 40px;
 }
 
-.navbar{
+.navbar {
     display: flex;
     margin-right: 4vh;
 }
 
-.navbar a{
+.navbar a {
     color: white;
     font-size: 18px;
     padding: 10px 22px;
@@ -77,23 +74,20 @@ nav ul li{
     transition: ease 0.40s;
 }
 
-.navbar a:hover,.navbar a.active{
+.navbar a:hover, .navbar a.active {
     background: white;
     color: black;
     box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
     border-radius: 5px;
-    
 }
 
-nav ul li a{
+nav ul li a {
     text-decoration: none;
     color: rgb(255, 255, 255);
     font-size: 17px;
 }
 
-.title{
-    text-decoration: none;
-    /* display: inline-block; */
+.title {
     font-size: 4vh;
     color: rgb(255, 255, 255);
     padding: 14px 17px;
@@ -102,43 +96,38 @@ nav ul li a{
     vertical-align: center;
 }
 
-.title h1{
+.title h1 {
     font-size: 10vh;
     text-shadow: 2px black;
     transition: ease 0.3s;
 }
 
-.title h1:hover{
-    color:transparent;
+.title h1:hover {
+    color: transparent;
     -webkit-text-stroke: 1px white;
-    
 }
 
-.button{
+.button {
     display: inline-block;
-    margin-top:5vh;
+    margin-top: 5vh;
     font-size: 25px;
     padding: 10px 30px;
     color: rgb(21, 74, 74);
-    /* background-color:rgb(164, 44, 44); */
     background-color: white;
     border-radius: 20px;
     text-decoration: none;
     transition: ease 0.30s;
 }
 
-.button:hover{
+.button:hover {
     transform: scale(1.1);
     color: white;
     background-color: rgb(21, 74, 74);
-    /* border: 2px solid rgb(42, 37, 68); */
     box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.4);
-    padding: 10px 30px;
 }
 
 /* Services */
-
-.text h2{
+.text h2 {
     font-size: 40px;
     font-weight: 650;
     margin-top: 40px;
@@ -147,19 +136,19 @@ nav ul li a{
     text-align: center;
 }
 
-.rowitems{
+.rowitems {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(100px,auto));
+    grid-template-columns: repeat(auto-fit, minmax(100px, auto));
     gap: 25px;
     align-items: center;
     text-align: center;
     margin-top: 20px;
-    margin-left: 30px ;
+    margin-left: 30px;
     margin-right: 30px;
-    margin-bottom:10px ;
+    margin-bottom: 10px;
 }
 
-.container-box{
+.container-box {
     border: 1px solid #d3d3d3;
     border-radius: 5px;
     padding: 50px 10px;
@@ -167,25 +156,25 @@ nav ul li a{
     cursor: pointer;
 }
 
-.container-image img{
+.container-image img {
     height: 100px;
     width: 100px;
     padding: 10px;
     margin-bottom: 15px;
 }
 
-.container-box h4{
+.container-box h4 {
     font-size: 20px;
     margin-bottom: 5px;
     font-weight: 550;
 }
 
-.container-box p{
+.container-box p {
     font-size: 16px;
     color: #808080;
 }
 
-.container-box:hover{
+.container-box:hover {
     transform: translateX(3px);
     box-shadow: 5px 20px 50px rgba(78, 78, 78, 0.1);
     border: 1px solid transparent;
@@ -193,12 +182,11 @@ nav ul li a{
 }
 
 /* Packages */
-
-.package-title{
+.package-title {
     text-align: center;
 }
 
-.package-title h2{
+.package-title h2 {
     font-size: 40px;
     font-weight: 650;
     padding-top: 75px;
@@ -206,26 +194,26 @@ nav ul li a{
     line-height: 2;
 }
 
-.package-content{
+.package-content {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.image{
+.image {
     position: relative;
-    transition: all 0.3s cubic-bezier(0.445,0.05,0.55,0.95);
+    transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
     cursor: pointer;
     filter: brightness(95%);
 }
 
-.image img{
+.image img {
     width: 100%;
     height: 500px;
     border-radius: 30px;
 }
 
-.image h3{
+.image h3 {
     color: white;
     position: absolute;
     font-size: 30px;
@@ -235,7 +223,7 @@ nav ul li a{
     right: 20px;
 }
 
-.dest-content{
+.dest-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -244,14 +232,14 @@ nav ul li a{
     margin-bottom: 50px;
 }
 
-.location h4{
+.location h4 {
     font-size: 25px;
     letter-spacing: 1px;
     font-weight: 600;
     margin-bottom: 2px;
 }
 
-.pac-details li{
+.pac-details li {
     font-size: 19px;
     color: #4c4c4c;
     margin-left: 15px;
@@ -259,35 +247,32 @@ nav ul li a{
     list-style-type: disc;
 }
 
-.image:hover{
+.image:hover {
     filter: brightness(120%);
     transform: scale(1.03);
 }
 
 /* Locations */
-
-.location-content{
+.location-content {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.col-content{
+.col-content {
     position: relative;
-    filter:brightness(95%);
-    transition: all 0.3s cubic-bezier(0.445,0.05,0.55,0.95);
-
+    filter: brightness(95%);
+    transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
-.col-content img{
+.col-content img {
     margin-bottom: 40px;
     height: 500px;
     border-radius: 27px;
     width: 100%;
-    
 }
 
-.col-content h5{
+.col-content h5 {
     position: absolute;
     font-size: 25px;
     color: white;
@@ -297,7 +282,7 @@ nav ul li a{
     cursor: pointer;
 }
 
-.col-content p{
+.col-content p {
     position: absolute;
     font-size: 20px;
     color: white;
@@ -306,38 +291,37 @@ nav ul li a{
     cursor: pointer;
 }
 
-.col-content:hover{
+.col-content:hover {
     filter: brightness(120%);
     transform: scale(1.03);
     cursor: pointer;
 }
 
 /* Newsletter */
-
-.newsletter{
+.newsletter {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
 }
 
-.newstext h2{
+.newstext h2 {
     margin-top: 100px;
     font-size: 38px;
 }
 
-.newstext p{
+.newstext p {
     font-size: 20px;
     color: #4c4c4c;
 }
 
-.newsletter form{
+.newsletter form {
     margin-top: 100px;
     width: 100%;
     position: relative;
 }
 
-.newsletter form input:first-child{
+.newsletter form input:first-child {
     display: inline-block;
     width: 300px;
     font-size: 17px;
@@ -348,7 +332,7 @@ nav ul li a{
     box-shadow: 5px 10px 30px rgb(85 85 85 / 20%);
 }
 
-.newsletter form input:last-child{
+.newsletter form input:last-child {
     display: inline-block;
     position: absolute;
     outline: none;
@@ -365,11 +349,168 @@ nav ul li a{
     transition: ease 0.30s;
 }
 
-.newsletter form input:last-child:hover{
+.newsletter form input:last-child:hover {
     border: 2px solid rgb(21, 74, 74);
     background-color: white;
     color: rgb(21, 74, 74);
 }
+
+/* Footer */
+footer {
+    text-align: center;
+    padding: 70px 0 30px;
+}
+
+footer .footer .social-links a {
+    font-size: 30px;
+    color: rgb(21, 74, 74);
+    margin: 0 10px;
+    transition: color 0.3s;
+}
+
+footer .footer .social-links a:hover {
+    color: #E91E63;
+}
+
+footer .footer h3 {
+    font-size: 28px;
+    font-weight: 600;
+    color: rgb(21, 74, 74);
+}
+
+footer .footer p {
+    color: black;
+    font-size: 18px;
+}
+
+footer .footer .footerlogo {
+    width: 65px;
+    height: 65px;
+    margin-bottom: 10px;
+}
+
+/* Media Queries for Responsive Design */
+
+@media (max-width: 1200px) {
+    .title h1 {
+        font-size: 8vh;
+    }
+
+    .button {
+        font-size: 20px;
+        padding: 8px 24px;
+    }
+
+    .rowitems {
+        grid-template-columns: repeat(auto-fit, minmax(80px, auto));
+    }
+
+    .container-box {
+        padding: 40px 8px;
+    }
+
+    .package-title h2, .text h2 {
+        font-size: 35px;
+    }
+
+    .package-content .image img, .location-content .col-content img {
+        height: 400px;
+    }
+
+    .newsletter form input:first-child {
+        width: 250px;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        margin-right: 0;
+    }
+
+    .navbar a {
+        padding: 8px 16px;
+        font-size: 16px;
+    }
+
+    .title h1 {
+        font-size: 6vh;
+    }
+
+    .button {
+        font-size: 18px;
+        padding: 6px 20px;
+    }
+
+    .rowitems {
+        grid-template-columns: repeat(auto-fit, minmax(60px, auto));
+    }
+
+    .container-box {
+        padding: 30px 5px;
+    }
+
+    .package-title h2, .text h2 {
+        font-size: 30px;
+    }
+
+    .package-content .image img, .location-content .col-content img {
+        height: 300px;
+    }
+
+    .newsletter form input:first-child {
+        width: 200px;
+    }
+
+    .newsletter form input:last-child {
+        padding: 12px 24px;
+        top: 4px;
+        right: 4px;
+    }
+}
+
+@media (max-width: 480px) {
+    .navbar a {
+        padding: 6px 12px;
+        font-size: 14px;
+    }
+
+    .title h1 {
+        font-size: 5vh;
+    }
+
+    .button {
+        font-size: 16px;
+        padding: 5px 16px;
+    }
+
+    .rowitems {
+        grid-template-columns: 1fr;
+    }
+
+    .container-box {
+        padding: 20px 5px;
+    }
+
+    .package-title h2, .text h2 {
+        font-size: 25px;
+    }
+
+    .package-content .image img, .location-content .col-content img {
+        height: 200px;
+    }
+
+    .newsletter form input:first-child {
+        width: 150px;
+    }
+
+    .newsletter form input:last-child {
+        padding: 10px 20px;
+        top: 2px;
+        right: 2px;
+    }
+}
+
 
 
 /* Footer */
@@ -481,6 +622,7 @@ nav ul li a{
     /* width: 500px; */
     margin-bottom: 0px;
     /* text-indent: 500px; */
+    z-index: -1;
 }
 
 .abt-text h1{
@@ -558,30 +700,29 @@ nav ul li a{
 
 /* Contact Us */
 
-.contactbody{
+.contactbody {
     background-color: #101010;
     background-repeat: no-repeat;
     background-size: cover;
-    
 }
 
-.contact{
+.contact {
     padding: 110px 30%;
     height: 100%;
     min-height: 100vh;
 }
 
-.contact-form h1{
+.contact-form h1 {
     font-size: 80px;
     color: white;
     margin-bottom: 20px;
 }
 
-.contact-form h1 span{
-    color:#fc0050;
+.contact-form h1 span {
+    color: #fc0050;
 }
 
-.contact-form p{
+.contact-form p {
     color: white;
     line-height: 30px;
     letter-spacing: 1px;
@@ -589,8 +730,8 @@ nav ul li a{
     margin-bottom: 20px;
 }
 
-
-.contact-form form input,form textarea{
+.contact-form form input, 
+form textarea {
     width: 100%;
     padding: 17px;
     border: none;
@@ -602,25 +743,101 @@ nav ul li a{
     border-radius: 10px;
 }
 
-.contact-form form .submit-btn{
+.contact-form form .submit-btn {
     display: inline-block;
     background-color: #fc0050;
     font-size: 27px;
-    font-weight: 600px;
+    font-weight: 600;
     border: 2px solid transparent;
     border-radius: 40px;
     width: 220px;
     cursor: pointer;
     transition: ease 0.30s;
-
 }
 
-.contact-form form .submit-btn:hover{
+.contact-form form .submit-btn:hover {
     border: 2px solid #fc0050;
     background-color: transparent;
     transform: scale(1.1);
-
 }
+
+/* Media Queries for Responsive Design */
+
+@media (max-width: 1200px) {
+    .contact {
+        padding: 110px 20%;
+    }
+
+    .contact-form h1 {
+        font-size: 60px;
+    }
+
+    .contact-form p {
+        font-size: 20px;
+    }
+
+    .contact-form form input, 
+    form textarea {
+        padding: 15px;
+        font-size: 18px;
+    }
+
+    .contact-form form .submit-btn {
+        font-size: 25px;
+        width: 200px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact {
+        padding: 100px 10%;
+    }
+
+    .contact-form h1 {
+        font-size: 50px;
+    }
+
+    .contact-form p {
+        font-size: 18px;
+    }
+
+    .contact-form form input, 
+    form textarea {
+        padding: 12px;
+        font-size: 16px;
+    }
+
+    .contact-form form .submit-btn {
+        font-size: 23px;
+        width: 180px;
+    }
+}
+
+@media (max-width: 480px) {
+    .contact {
+        padding: 90px 5%;
+    }
+
+    .contact-form h1 {
+        font-size: 40px;
+    }
+
+    .contact-form p {
+        font-size: 16px;
+    }
+
+    .contact-form form input, 
+    form textarea {
+        padding: 10px;
+        font-size: 14px;
+    }
+
+    .contact-form form .submit-btn {
+        font-size: 20px;
+        width: 160px;
+    }
+}
+
 
 /* Registration Form */
 
